Fix screen overflow and add portfolio link to footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,10 @@
  *= require_self
  */
 
+.homepage {
+  width: 100%;
+}
+
 .header-logo {
   color: #EF631C;
   font-size: 220%;
@@ -56,8 +60,10 @@ header {
 }
 
 html {
-    position: relative;
-    min-height: 100%;
+  position: relative;
+  min-height: 100%;
+  max-height: 100%;
+  overflow-x:hidden
 }
 
 .splash-image {
@@ -223,8 +229,14 @@ html {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   transition: box-shadow 0.3s ease;
+  transition: 0.4s;
+  image-rendering: -moz-crisp-edges;         /* Firefox */
+  image-rendering:   -o-crisp-edges;         /* Opera */
+  image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
   &:hover {
-    border: 1px solid darkgray;
+    transform: scale(1.2);
   }
 }
 
@@ -238,8 +250,35 @@ html {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   transition: box-shadow 0.3s ease;
+  transition: 0.4s;
+  image-rendering: -moz-crisp-edges;         /* Firefox */
+  image-rendering:   -o-crisp-edges;         /* Opera */
+  image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
   &:hover {
-    border: 1px solid darkgray;
+    transform: scale(1.2);
+  }
+}
+
+.portfolio {
+  height: 34px;
+  width: 34px;
+  margin-left: 24px;
+  margin-right: 24px;
+  background-image: image-url('Portfolio.png');
+  background-size: 34px 34px;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  transition: box-shadow 0.3s ease;
+  transition: 0.4s;
+  image-rendering: -moz-crisp-edges;         /* Firefox */
+  image-rendering:   -o-crisp-edges;         /* Opera */
+  image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
+  &:hover {
+    transform: scale(1.2);
   }
 }
 
